store/src/styles/components/address_list.scss
.hern-address-list {
   padding: 16px;
}
.hern-address-list__header {
   margin-bottom: 16px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-align-items: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
   justify-content: space-between;
}
.hern-address-list__heading {
   color: gray;
}
.hern-address-list__close-btn {
   border-radius: 9999px;
   border-width: 2px;
   border-color: rgba(52, 211, 153, 1);
   height: 1.5rem;
   width: 2rem;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-align-items: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
}

.hern-address-list__address {
   color: rgba(64, 64, 64, 0.8);
   padding: 0.5rem;
   margin-bottom: 0.5rem;
   border-radius: 0.125rem;
   cursor: pointer;
   background: #f9f9f9;
   padding: 14px 16px;
   border-radius: 8px;
   // -webkit-border-radius: 0.125rem;
   // -moz-border-radius: 0.125rem;
   // -ms-border-radius: 0.125rem;
   // -o-border-radius: 0.125rem;
   // font-style: normal;
   // &:hover {
   //    border-color: rgba(16, 185, 129, 1);
   // }
}
.hern-address-list__address--active {
   // border-color: rgba(16, 185, 129, 1);
}
.hern-address-list__address--not-clickable {
   border-width: 2px;
   border-color: rgba(209, 213, 219, 1);
   padding: 0.5rem;
   margin-bottom: 0.5rem;
   border-radius: 0.125rem;
   cursor: pointer;
   color: rgba(156, 163, 175, 1);
   cursor: not-allowed;
   // -webkit-border-radius: 0.125rem;
   // -moz-border-radius: 0.125rem;
   // -ms-border-radius: 0.125rem;
   // -o-border-radius: 0.125rem;
   &:hover {
      border-color: rgba(209, 213, 219, 1);
   }
}
.hern-address-list-header__label {
   display: block;
   font-weight: 600;
   font-size: 20px;
   line-height: 22px;
   margin: 0 10px;
}
.hern-address-list__address-landmark {
   font-weight: 600;
   font-size: 18px;
   line-height: 20px;
}

